--- a/cmbyn/Base.lproj/Main.storyboard
+++ b/cmbyn/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="A9H-8u-GyJ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" id="A9H-8u-GyJ">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="A9H-8u-GyJ" id="659-KV-4Vp">
@@ -112,9 +112,6 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <accessibility key="accessibilityConfiguration" identifier="contactCell">
-                                            <bool key="isElement" value="YES"/>
-                                        </accessibility>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -133,6 +130,9 @@
                                             <segment title="All Contacts"/>
                                             <segment title="VoIP Only"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="switchedVoIPList:" destination="w4E-yu-2dh" eventType="valueChanged" id="wft-ac-Aw1"/>
+                                        </connections>
                                     </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aso-26-PVm">
                                         <rect key="frame" x="345" y="11" width="22" height="22"/>
@@ -147,6 +147,10 @@
                         <viewLayoutGuide key="safeArea" id="GGG-Vr-a4J"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Contacts" image="first" selectedImage="first" id="O9W-Qg-Pu9"/>
+                    <connections>
+                        <outlet property="contactsTableView" destination="1fG-K5-ASd" id="LGd-P2-JVG"/>
+                        <outlet property="showVoIPOnly" destination="nBY-ja-l7T" id="TJR-WX-QK2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C83-cT-a8y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
